@@ -1,3 +1,13 @@
+2011-01-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Align import/export directives
+        https://bugs.webkit.org/show_bug.cgi?id=52208
+
+        * API/JSBase.h: Align import/export directives with
+        WebKit2/Shared/API/c/WKBase.h
+
 2011-01-14  Michael Saboff  <msaboff@apple.com>
 
         Reviewed by Oliver Hunt.
